--- a/style.css
+++ b/style.css
@@ -18,18 +18,18 @@ body{
     font-style: normal;
     font-variation-settings:
     "slnt" 0;  
-    
 }
 
 .problemaMat{
-
-    font-size: 1.5em;
+    margin-top: 2em;
+    font-size: 1.3em;
     font-weight: 500;
     font-style: italic;
     color: #ac0f13;
     padding: 1em;
-    top: 15%;
+    top: 5%;
 }
+
 
 .respuestaOficial {
     top: 10%;
@@ -52,14 +52,26 @@ body{
 
 /*Seccion Input*/
 .input-texto{
-    display: flexbox;
+    margin: 2em 0 0 0;
+    position: flex;
     float: left;
-    margin-top: 20vh;
-    width: 67.2%;
-    height: 40vh;
+    width: 65%;
+    height: auto;
     text-align: center;
     box-sizing: border-box;
 }
+
+.botonesYAdvertencia{
+    position: flex;
+    float: left;
+    width: 65%;
+    height: auto;
+    text-align: center;
+    box-sizing: border-box;
+    margin-top: 2em;
+  
+}
+
 
 /*Campo Input*/
 .campo-texto {
@@ -84,6 +96,7 @@ body{
 }
 
 .unidades{
+    margin: 4em 0 0 0;
     width: 100%;
 }
 
@@ -100,26 +113,20 @@ select{
     box-shadow: 3px 3px 30px #cac2c2;
 }
 
+.advertencia{
+    
+    display: inline-block;
+    text-align: center;
+    color: #495057;
+    margin: 7em 0 1em 0;
+    max-width: 70%; /* Ajusta este valor según el ancho máximo deseado */
+    white-space: normal; /* Permite que el texto se ajuste a varias líneas */
+}
 
 /*Seccion botones Input*/
 .botones{
-    
-    position:absolute;
-    top: 80%;
-    left: 10%;
-    width: 80%;
-    
-    
-}
-
-.advertencia{
-    position:absolute;
-    text-align: center;
-    color: #495057;
-    top: 70%;
-    left: 13%;
-    max-width: 50%; /* Ajusta este valor según el ancho máximo deseado */
-    white-space: normal; /* Permite que el texto se ajuste a varias líneas */
+    margin-top: 1em;
+    width:  auto;
 }
 
 .simbolo {
@@ -128,10 +135,8 @@ select{
 
 
 .btnEncriptar{
-    position: absolute;
-    top: 84%;
-    width: 22.7vw;
-    height: 6.5vh;
+    width: 40%;
+    height: 3em;
     padding: auto;
     font-size: 16px;
     font-weight: 100;
@@ -150,12 +155,9 @@ select{
 }
 
 .btnDesencriptar{
-    position: absolute;
-    top: 84%;
-    left: 35%;
-    width: 22.7vw;
-    height: 6.5vh;
-    padding: auto;
+    width: 40%;
+    height: 3em;
+    
     margin-left: 1em;
     font-size: 16px;
     font-weight: 100;
@@ -173,20 +175,21 @@ select{
 }
 
 /*Seccion Output*/
-.ouput-mensaje{
+.ouput-mensaje {
     text-align: center;
-    position: relative;
-    float: right;
+    position: absolute;
+    right: 5%;
     width: 27.2%;
-    height: 80vh;
+    height: 70vh;
     box-sizing: border-box;
-}
+  }
+  
 
 /*Campo Output*/
 .mensaje{
     
     width: 90%;
-    height: 90%; 
+    height: 70vh; 
     padding: 5%;
     display: inline-block;
     box-shadow: 10px 10px 30px 5px #dfd7d7;
@@ -209,7 +212,7 @@ select{
   
 #munecos, #sinTexto, #incorrecta {
     position: absolute;
-    max-width: 85%;
+    max-width: 80%;
     max-height: 60%;
     transition: 0.5s;
     
@@ -217,11 +220,12 @@ select{
   
 #munecos {
     top: 5%;
-    left: 7.5%;
+    left: 10%;
 }
   
 #sinTexto {
-    top: 63%;
+    top: 75%;
+    left: 10%;
     font-size: 1.2em;
     color: rgb(14, 13, 13);
     font-weight: 70;
@@ -232,8 +236,8 @@ select{
 .excelente{
     position: absolute;
     
-    top: 55%;
-    left: 22%;
+    top: 65%;
+    left: 28%;
     font-size: 2em;
     color: #dc2b19;
     font-weight: 70;
@@ -242,10 +246,11 @@ select{
 
 .bienvenida{
     position: absolute;
-    max-width: 85%;
-    top: 65%;
+    left: 10%;
+    top: 75%;
+    width: 80%;
     transition: 0.3s;
-    font-size: 1.8em;
+    font-size: 1.6em;
     color: rgb(14, 13, 13);
     font-weight: lighter;
     font-family: "Bebas Neue", sans-serif;
@@ -255,7 +260,7 @@ select{
 .incorrecta, .intentos, .fin-intentos {
     text-align: left;
     left: 15%;
-    top: 70%;
+    top: 75%;
     transition: 0.3s;
     font-size: 1.6em;
     color: rgb(14, 13, 13);
@@ -292,8 +297,10 @@ select{
 }
 
 footer {
-   
-    display: inline-block;
+    position: relative; 
+    display: -webkit-inline-flex;
+    top: 90%;
+    left: 40%;
     width: 100%;
     text-align: center;
     margin: 2em 0 1em 0;
@@ -335,32 +342,31 @@ footer {
     }
 
    .advertencia{
-        display: block;
-        position: relative;
-        text-align: center;
+        position: absolute;
         margin: 4em 0 2em 0;
-        width: 100%;
-        left: 10%;
+        width: 90%;
+        left: 5%;
         font-size: 0.8em;
-        max-width: 80%; /* Ajusta este valor según el ancho máximo deseado */
-        white-space: none; /* Permite que el texto se ajuste a varias líneas */
+        max-width: 100%; /* Ajusta este valor según el ancho máximo deseado */
         
     }
 
     .botones{
-        position: relative;
+        position: absolute;
+        top: 85%;
         width: 90%;
+        left: 5%;
     }
 
     .btnEncriptar {
-        position: relative;
+        
         width: 90%;
         margin: 0;
         left: 0;
     }
    
     .btnDesencriptar {
-        position: relative;
+        
         width: 90%;
         margin: 0;
         margin-top: 1em;
@@ -369,13 +375,12 @@ footer {
     
     /*Seccion Output*/
     .ouput-mensaje {
-        
-        position: relative;
-        margin: 0;
-        box-sizing: border-box;
+        position: absolute;
+        top: 100%;
+        left: 0%;
         margin-top: 10%; /* Ajusta el margen superior según sea necesario */
         width: 100%;
-        height: 100vw;
+        height: 100%;
     } 
     
     .mensaje{
@@ -399,10 +404,12 @@ footer {
     }
 
     .bienvenida, .incorrecta{
+        position: absolute;
         top: 10%;
-        left: 17%;
         width: 70%;
+        left: 15%;
         font-size: 1.5em;
+        text-align: center;
     }
 
     .respuestaOficial{
@@ -419,7 +426,7 @@ footer {
 
     #munecos{
         position: absolute;
-        max-width: 80%;
+        max-width: 70%;
         max-height: 70%;
         top: 36%;
         left: 13%;
@@ -445,10 +452,21 @@ footer {
         
     }
 
-}
+
   
+    footer{
+   position: absolute; 
+   display: block;
+   top: 200%;
+   left: 0%;
+   text-align: center;
+   padding-bottom: 5%;
+}
+
+
+
 /* Media queries para hacerlo responsive */
-@media screen and (min-width:431px) and (max-width: 950px){
+@media screen and (min-width:431px) and (max-width: 900px){
 
     header{
         margin-top: 2em;
@@ -476,24 +494,22 @@ footer {
     .unidades{
         margin-top: 2em;
     }
+
     .advertencia{
-        display: inline-block;
-        position: relative;
-        text-align: center;
-        margin: 20% 0 0% 5%;
-        width: auto;
-        left: 20%;
-        
+        position: absolute;
+        margin: 4em 0 2em 0;
+        width: 90%;
+        left: 5%;
+        font-size: 0.8em;
+        max-width: 100%; /* Ajusta este valor según el ancho máximo deseado */
         
     }
 
     .botones{
-        position: relative;
-        width: auto;
-        margin: 2em 0 2em 0;
-        left: 0%;
-        text-align: center;
-        
+        position: absolute;
+        top: 60%;
+        width: 90%;
+        left: 5%;
     }
 
     .btnEncriptar .btnDesencriptar {
@@ -515,14 +531,13 @@ footer {
         left: 0;
     }
     
-    /*Seccion Output*/
     .ouput-mensaje {
-        position: relative;
-        margin: 0;
-        box-sizing: border-box;
-        margin-top: 0%; /* Ajusta el margen superior según sea necesario */
+        position: absolute;
+        top: 100%;
+        left: 0%;
+        margin-top: 10%; /* Ajusta el margen superior según sea necesario */
         width: 100%;
-        height: 60vw;
+        height: 100%;
     } 
     
     .mensaje{
@@ -532,9 +547,10 @@ footer {
     }
 
     #munecos{
-        top: 13%;
-        left: 18%;
-        scale: 1.2;
+        max-width: 45%;
+        top: 10%;
+        left: 15%
+        
     }
 
     #sinTexto {
@@ -570,6 +586,14 @@ footer {
         border-radius: 50px;
         left: 53%; 
     }
+    footer{
+        position: absolute; 
+        display: block;
+        top: 300%;
+        left: 0%;
+        text-align: center;
+        padding-bottom: 5%;
+     }
 
 }
 
