--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ select{
     background-color: #FFFEF9;
     border:none;
     border-radius: 5px;
-    width: 30%;
+    width: 20%;
     
     box-shadow: 3px 3px 30px #888181;
 }
@@ -180,6 +180,12 @@ select{
     transform: scale(0.8);
 }
 
+.btnEncriptar.desactivar {
+    background-color: #ccc;
+    color: #999;
+    cursor: not-allowed;
+  }
+
 /*Seccion Output*/
 .ouput-mensaje {
     text-align: center;
@@ -193,7 +199,7 @@ select{
 
 /*Campo Output*/
 .mensaje{
-    
+    position: relative;
     width: 80%;
     height: 90%; 
     padding: 5%;
@@ -214,36 +220,52 @@ select{
 .ocultar{
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+    cursor: not-allowed;
 }
   
 #munecos, #sinTexto, #incorrecta {
     position: absolute;
     max-width: 80%;
-    max-height: 60%;
+    max-height: 40%;
     transition: 0.5s;
     
 }
   
 #munecos {
-    top: 5%;
-    left: 10%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -80%);
+    max-width: 70%; /* Asegura que la imagen no se desborde del contenedor */
+    max-height: 60%; /* Asegura que la imagen no se desborde del contenedor */
+    
+    
+    
 }
   
 #sinTexto {
-    top: 75%;
-    left: 10%;
-    font-size: 1.2em;
+    position: absolute;
+    top: 50%;
+    
+    transform: translate(0%, 200%);
+    max-width: 90%; /* Asegura que la imagen no se desborde del contenedor */
+    max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
+    white-space: normal; /* Permite que el texto se ajuste a varias líneas */
+    font-size: 1em;
     color: rgb(14, 13, 13);
     font-weight: 70;
     font-family: "Bebas Neue", sans-serif;
-   
+    overflow: hidden; /* Evita que el texto se desborde del contenedor */
 }
 
 .excelente{
     position: absolute;
-    
-    top: 65%;
-    left: 28%;
+    width: 80%;
+    top: 50%;
+   
+    transform: translate(0%, 110%);
+    max-width: 100%; /* Asegura que la imagen no se desborde del contenedor */
+    max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
     font-size: 2em;
     color: #dc2b19;
     font-weight: 70;
@@ -405,11 +427,6 @@ footer {
         left: 13%;
     }
 
-    .excelente{
-        top: 10%;
-        left: 29%;
-        
-    }
 
     .bienvenida, .incorrecta{
         position: absolute;
@@ -431,24 +448,54 @@ footer {
         top: 15%;
         font-size: 0.9em;
     }
-
-    #munecos{
-        position: absolute;
-        max-width: 70%;
-        max-height: 70%;
-        top: 36%;
-        left: 13%;
-    }
-
-    #sinTexto{
+    #munecos, #sinTexto, #incorrecta {
         position: absolute;
         max-width: 80%;
         max-height: 60%;
-        top: 22%;
-        left: 10%;
-        font-size: 1em;
-    }
+        transition: 0.5s;
         
+    }
+      
+    #munecos {
+        position: absolute;
+        
+       
+        transform: translate(-50%, -80%);
+        max-width: 80%; /* Asegura que la imagen no se desborde del contenedor */
+        max-height: 60%; /* Asegura que la imagen no se desborde del contenedor */
+         
+    }
+      
+    #sinTexto {
+        position: absolute;
+        top: 50%;
+        
+        transform: translate(00%, 200%);
+        max-width: 90%; /* Asegura que la imagen no se desborde del contenedor */
+        max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
+        white-space: normal; /* Permite que el texto se ajuste a varias líneas */
+        font-size: 1.2em;
+        color: rgb(14, 13, 13);
+        font-weight: 70;
+        font-family: "Bebas Neue", sans-serif;
+       
+    }
+
+
+
+    .excelente{
+        position: absolute;
+        width: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -900%);
+        max-width: 100%; /* Asegura que la imagen no se desborde del contenedor */
+        max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
+        font-size: 2em;
+        color: #dc2b19;
+        font-weight: 70;
+        font-family: "Bebas Neue", sans-serif;
+    }
     
 
     .btnCopiar {
@@ -555,32 +602,56 @@ footer {
         
     }
 
-    #munecos{
-        max-width: 45%;
-        top: 10%;
-        left: 15%
+
+    #munecos, #sinTexto, #incorrecta {
+        position: absolute;
+        max-width: 80%;
+        max-height: 60%;
+        transition: 0.5s;
         
+    }
+      
+    #munecos {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -95%);
+        max-width: 70%; /* Asegura que la imagen no se desborde del contenedor */
+        max-height: 60%; /* Asegura que la imagen no se desborde del contenedor */
+        
+        
+        
+    }
+      
+    #sinTexto {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        max-width: 90%; /* Asegura que la imagen no se desborde del contenedor */
+        max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
+        white-space: normal; /* Permite que el texto se ajuste a varias líneas */
+        font-size: 1.2em;
+        color: rgb(14, 13, 13);
+        font-weight: 70;
+        font-family: "Bebas Neue", sans-serif;
+       
     }
 
-    #sinTexto {
-        position: relative;
-        max-width: 60%;
-        max-height: 70%;
-    }
-        
-    #sinTexto {
-        display: block;
-        position: absolute;
-        top: 38%;
-        left: 60%;
-        width: 25%;
-        font-weight: 500;
-        
-    }
+
 
     .excelente{
-        top: 20%;
-        left: 61%;
+        position: absolute;
+        width: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 60%);
+        max-width: 100%; /* Asegura que la imagen no se desborde del contenedor */
+        max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
+        font-size: 2em;
+        color: #dc2b19;
+        font-weight: 70;
+        font-family: "Bebas Neue", sans-serif;
     }
 
     .bienvenida, .incorrecta{
