--- a/style.css
+++ b/style.css
@@ -1,10 +1,46 @@
+.header-contenedor{
+    display: inline-block;
+    
+    justify-content: space-between;
+    
+}
 
 h1{
-    display: flex;
-    align-items: center;
+    display: inline;
     font-family: "Bebas Neue", sans-serif;
     font-weight: <weight>;
     font-style: normal;
+   
+    
+}
+
+.logo {
+    height: auto;
+    vertical-align: middle;
+    
+}
+
+.cajaTema{
+    display: inline-block;
+   
+    
+    
+    
+}
+
+.tema{
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: <weight>;
+    font-style: normal;
+    color: #fdcf00;
+    font-size: 1em;
+    font-weight: 500;
+    
+    background-color: #FFFEF9;
+    border:none;
+    border-radius: 5px;
+    width: 100%;
+    
 }
 
 body{
@@ -49,8 +85,6 @@ body{
     
 }
 
-
-/*Seccion Input*/
 .input-texto{
     margin: 2em 0 0 0;
     position: flex;
@@ -72,11 +106,9 @@ body{
   
 }
 
-
 .campo-texto {
     vertical-align: middle;
     text-align: center;
-    
     height: 1em;
     
     font-weight: bold;
@@ -92,7 +124,6 @@ body{
     box-shadow: 3px 3px 30px #888181;
 }
 
-
 .campo-texto::placeholder{
     color: #003D92;
     font-weight: 300;
@@ -104,7 +135,7 @@ body{
     width: 100%;
 }
 
-select{
+.unidad{
     color: #003D92;
     vertical-align: middle;
     text-align: center;
@@ -120,7 +151,7 @@ select{
 }
 
 .advertencia{
-    
+    font-size: 0.8em;
     display: inline-block;
     text-align: center;
     color: #495057;
@@ -129,7 +160,6 @@ select{
     white-space: normal; /* Permite que el texto se ajuste a varias líneas */
 }
 
-/*Seccion botones Input*/
 .botones{
     margin-top: 1em;
     width:  auto;
@@ -138,7 +168,6 @@ select{
 .simbolo {
     fill: #aebac5;
 }
-
 
 .btnEncriptar{
     width: 40%;
@@ -184,9 +213,8 @@ select{
     background-color: #ccc;
     color: #999;
     cursor: not-allowed;
-  }
+}
 
-/*Seccion Output*/
 .ouput-mensaje {
     text-align: center;
     position: absolute;
@@ -194,10 +222,8 @@ select{
     
     height: 70vh;
     box-sizing: border-box;
-  }
+}
   
-
-/*Campo Output*/
 .mensaje{
     position: relative;
     width: 80%;
@@ -213,11 +239,14 @@ select{
     font-weight: 400;
     resize: none; /*Evita que el usuario pueda redimensionar el textarea*/
     outline: none;
+    overflow-x: auto;
+    
    
     
 }
 
 .ocultar{
+    visibility: hidden;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     cursor: not-allowed;
@@ -225,7 +254,7 @@ select{
   
 #munecos, #sinTexto, #incorrecta {
     position: absolute;
-    max-width: 80%;
+    max-width: 70%;
     max-height: 40%;
     transition: 0.5s;
     
@@ -233,7 +262,8 @@ select{
   
 #munecos {
     position: absolute;
-    top: 50%;
+
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -80%);
     max-width: 70%; /* Asegura que la imagen no se desborde del contenedor */
@@ -245,12 +275,12 @@ select{
   
 #sinTexto {
     position: absolute;
-    top: 50%;
+    top: 60%;
     
     transform: translate(0%, 200%);
-    max-width: 90%; /* Asegura que la imagen no se desborde del contenedor */
-    max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
-    white-space: normal; /* Permite que el texto se ajuste a varias líneas */
+    max-width: 88%; /* Asegura que la imagen no se desborde del contenedor */
+    max-height: 50%; /* Asegura que la imagen no se desborde del contenedor */
+    
     font-size: 1em;
     color: rgb(14, 13, 13);
     font-weight: 70;
@@ -260,9 +290,10 @@ select{
 
 .excelente{
     position: absolute;
-    width: 80%;
-    top: 50%;
-   
+    width: 100%;
+    top: 55%;
+    text-align: center;
+    left: 0%;
     transform: translate(0%, 110%);
     max-width: 100%; /* Asegura que la imagen no se desborde del contenedor */
     max-height: 100%; /* Asegura que la imagen no se desborde del contenedor */
@@ -347,9 +378,20 @@ footer {
         margin: 3em auto 2em 1.5em;
     }
     
+    .tema{
+        margin-top: 2em;
+        
+    }
+
+    .cajaTema{
+        font-size: 1.2em;
+        width: 88%;
+    }
+   
     .problemaMat{
         margin: 1em 0 0 0;
         font-size: 1.2em;
+       
     }
 
     /*Seccion Input*/
@@ -371,7 +413,7 @@ footer {
 
    .advertencia{
         position: absolute;
-        top: 95%;
+        transform: translate(0%, -220%);
         width: 90%;
         left: 5%;
         font-size: 0.8em;
@@ -406,7 +448,7 @@ footer {
     .ouput-mensaje {
         position: absolute;
         z-index: -1; /* Valor más alto que otros elementos */
-        top: 120%;
+        transform: translate(0%, 70%);
         left: 0%;
         margin-top: 10%; /* Ajusta el margen superior según sea necesario */
         width: 100%;
@@ -520,8 +562,6 @@ footer {
     }
 }
 
-
-
 /* Media queries para hacerlo responsive */
 @media screen and (min-width:431px) and (max-width: 730px){
 
@@ -545,14 +585,13 @@ footer {
         
     }
 
-
     .unidades{
         margin-top: 2em;
     }
 
     .advertencia{
         position: absolute;
-        margin: 4em 0 2em 0;
+        margin: 2em 0 2em 0;
         width: 90%;
         left: 5%;
         font-size: 0.8em;
